# chak

./: .gitignore  Cargo.toml  README.md  example_global_config.toml  file1.txt  file2.txt  ignorefile.txt
example/: .env  .ignore  cmd.sh  file.txt  file2.txt  index.js  package-lock.json  package.json
example/.chak/: config.toml
example/.chak/staging_area/: stage
example/helper/: kill_port
example/restore/: .ignore
example/src/: .ignore
example/src/admin/: admin.controller.js  admin.service.js
example/src/donation/: donation.schema.js
example/src/service/: auth.js  db.js  error.middleware.js  fileupload.controller.js  mail.service.js  validation.middleware.js
example/src/teacher/: teacher.controller.js  teacher.schema.js  teacher.service.js
example/src/tests/: auth.test.js  (+1 more)
myfold/: file3.txt
src/: add.rs  blob_hash_pointer.rs  blob_object.rs  blob_pointer.rs  chak_traits.rs  commandline.rs  commit.rs  commit_hash_pointer.rs  commit_object.rs  commit_pointer.rs  common.rs  config.rs  config_global.rs  custom_error.rs  diff.rs  diff_algo.rs  exclude.rs  global_config.rs  handle_blob.rs  handle_commit.rs  handle_common.rs  handle_ignore.rs  handle_object_pointer.rs  handle_tree.rs  handle_version.rs  handle_version_head.rs  hash_pointer.rs  hash_pointer_algo.rs  hashed_algo.rs  hashed_blob.rs  hashed_content_algo.rs  hashing.rs  init.rs  macros.rs  main.rs  nested_tree_hash_pointer.rs  nested_tree_object.rs  nested_tree_pointer.rs  object.rs  object_pointer.rs  (+25 more)
zchak_diagrams/: hierarchy.excalidraw  init_module.excalidraw  overview.excalidraw
(+34 files in other folders)
