[package]
name = "chak-vcs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
ignore = "0.4.23"
once_cell = "1.20.2"
sha2 = "0.10.8"
serde = { version = "1.0.217", features = ["derive"] }
#serde_json = "1.0.135"
similar = "2.6.0"
itertools = "0.14.0"
indexmap = { version = "2.7.0", features = ["serde"] }
toml = "0.8.20"
libc = "0.2.169"
hex = "0.4.3"
